# Parking-management

./: .gitignore  Makefile  Makefile.in  README.md  config.h  configure  configure.in  interface.glade  interface.glade.bak  interface.gladep
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  main.c  park  style.css
src/p1/: Makefile  Makefile.in  config.h  configure  configure.in  parking.glade  parking.glade.bak  parking.glade.bak.bak  parking.glade.bakp.bak  parking.gladep
src/p1/po/: Makefile  Makefile.in
src/p1/src/: Makefile  Makefile.am  Makefile.in  callbacks.h  gestparking  interface.c  interface.c.bak  interface.h  main.c  park.c  park.h  parkk.c  parkk.h
src/p2/: Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  projectagent.glade.bak  projectagent.gladep
src/p2/po/: Makefile  Makefile.in
src/p2/src/: Makefile  Makefile.am  Makefile.in  agent.c  agent.h  callbacks.c  callbacks.h  configure  configure.ac  interface.c  interface.c.bak  main.c  projectagent
src/p3/: Makefile  Makefile.in  reservation.glade  reservation.glade.bak  resv.c
src/p3/po/: Makefile  Makefile.in
src/p3/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gtkrc  interface.c  interface.c.bak  interface.h  main.c  parking.h  reservation  resv.c  resv.h
